modify(Order): 소나큐브 이슈 제거 (#106)